# SPDX-License-Identifier: Apache-2.0
[metadata]
name = onaptests
version = 0.0.1
description = Test SDK to use ONAP Programatically
long_description = file: README.md
url = https://git.onap.org/testsuite/pythonsdk-tests
author = Orange OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7,<4
package_dir=
    =src
packages=find_namespace:
setup_requires =
  pytest-runner==5.2
tests_require =
  mock
  pytest
  pytest-cov
  pytest-mock
  requests-mock

[options.packages.find]
where=src

[aliases]
test=pytest

[tool:pytest]
addopts =
  --verbose --doctest-modules --junitxml=pytest-unit.xml
  --cov-report term-missing --cov-report xml --cov-report html
  --cov=src  --maxfail=1

testpaths = tests

[entry_points]
xtesting.testcase =
  basic_vm = onaptests.scenario.basic_vm.BasicVm
